# SpikePolars

./: .gitignore  Dockerfile  README.md  main.py  make_data.py  pyproject.toml  requirements.txt
terraform/: ecs.tf  iam.tf  logs.tf  main.tf  outputs.tf  step.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  vpc.tf
